--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         </h6>
     </div>
 
+    <div class="owerlay hidden">
+        <img src="./loader.gif" alt="rasm">
+    </div>
+
     <!-- JavaScript -->
     <script src="app.js"></script>
 </body>
